--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.mjs"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,9 @@
   },
   "homepage": "https://github.com/mkubera/goit-node-4#readme",
   "dependencies": {
-    "colors": "^1.4.0",
-    "commander": "^9.4.1"
+    "express": "^4.18.2",
+    "nanoid": "^4.0.0",
+    "nodemon": "^2.0.20",
+    "ramda": "^0.28.0"
   }
 }
